Changes in copy, readme.md

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 				<!-- JavaScript coders wring JavaScript is too dull. How about no JS at all on this page? -->
 				<input id="details-toggle" type="checkbox">
 				<div class="details">
-					<p>Type anything you want. <code>[ ]</code> and <code>[x]</code> are considered checkmarks, they can be toggled by clicking (right in the text field, try it!). Changes are automatically stored in localStorage.</p>
+					<p>Type anything you want. <code>[ ]</code> and <code>[x]</code> are considered checkmarks, they can be toggled by clicking (right in the text field, try it!). Changes are automatically saved in localStorage.</p>
+					<p>Golfed by <a href="http://twitter.com/subzey">subzey</a></p>
 					<p>GitHub repo: <a href="https://github.com/codegolf/todo">https://github.com/codegolf/todo</a></p>
 				</div>
 			</td>
