--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 				<!-- JavaScript coders wring JavaScript is too dull. How about no JS at all on this page? -->
 				<input id="details-toggle" type="checkbox">
 				<div class="details">
-					<p>Type anything you want. <code>[ ]</code> and <code>[x]</code> are considered checkmarks, they can be toggled by clicking (right in the text field, try it!). Changes are automatically saved in localStorage.</p>
+					<p>Inspired  by GitHub <a href="https://github.com/blog/1841-nested-task-lists">task lists</a>. Write anything you want. Type &ldquo;<kbd>[ ]</kbd>&rdquo; or &ldquo;<kbd>[x]</kbd>&rdquo; anywhere to place a checkmark. These checkmarks can be toggled by clicking (right in the text field, try it!). Changes are automatically saved in localStorage.</p>
 					<p>Golfed by <a href="http://twitter.com/subzey">subzey</a></p>
-					<p>GitHub repo: <a href="https://github.com/codegolf/todo">https://github.com/codegolf/todo</a></p>
+					<p><a href="https://github.com/codegolf/todo">GitHub repo</a></p>
 				</div>
 			</td>
 		</tr>
