--- a/golf.html
+++ b/golf.html
@@ -1,1 +1,1 @@
-<body onload=t.value=(l=localStorage).t||''><textarea onclick="i=selectionStart;i^t[s='selectionEnd']||(value=((10+value).replace(eval('/^(.{'+[i,i+1]+'}\\[)(x| )]/i'),function(_,l,x){return l+' x'[++x|0]+']'})).slice(2),oninput(t[s]=i))"style=width:100%;height:100% oninput=l.t=value id=t>
+<body onload=t.value=(l=localStorage).t||''><textarea onclick="i=selectionStart;i^t[s='selectionEnd']||(value=((10+value).replace(eval('/^(.{'+i+'}.?\\[)(x| )]/i'),function(_,l,x){return l+' x'[++x|0]+']'})).slice(2),oninput(t[s]=i))"style=width:100%;height:100% oninput=l.t=value id=t>
