--- a/golf.html
+++ b/golf.html
@@ -1,1 +1,1 @@
-<body onload=t.value=[(l=localStorage).t]><textarea onclick="i=t[s='selectionEnd'];i^selectionStart?0:l.t=value=value.replace(/\[(x| )]/ig,function(m,x,p){return i>p&i<3+p?'['+' x'[++x|0]+']':m});t[s]=i"style=width:100%;height:100% oninput=l.t=value id=t>
+<body onload=t.value=[(l=localStorage).t]><textarea onclick="i=t[s='selectionEnd'];i^selectionStart?0:l.t=value=value.replace(/\[(x| )]/ig,function(m,x,p){return i>p&i<3+p?++x?'[x]':'[ ]':m});t[s]=i"style=width:100%;height:100% oninput=l.t=value id=t>
